# researcher

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: changelog.md  index.md  installation.md  usage.md
researcher/src/storage/: folder_manager.py
src/: __init__.py  config.py
src/integrations/: arxiv_downloader.py
src/researcher/: __init__.py  main.py
src/researcher/cli/: cli.py
src/researcher/embedding/: __init__.py  chunkers.py  embedder.py  embedder_ollama.py  embedder_transformers.py  index_builder.py  search.py
src/researcher/extract/: __init__.py  pdf_text.py
src/researcher/integrations/: __init__.py  arxiv_downloader.py  arxiv_search.py
src/researcher/pipelines/: __init__.py  embed_papers.py  fetch_papers.py  fetch_papers_pipeline.py  retriever.py
src/researcher/rag/: __init__.py  llm.py  llm_ollama.py  llm_transformers.py  rag_orchestrator.py
src/researcher/storage/: __init__.py  folder_manager.py
src/tests/extract/: test_extract.py
src/tests/storage/: test_folder_manager.py
src/ui/: app.py
tests/cli/: test_cli.py
tests/embedding/: test_embedder.py  test_search.py
tests/extract/: test_extract.py
tests/integrations/: test_arxiv_integration.py
tests/rag/: test_llm.py
tests/storage/: test_folder_manager.py
