[project]
name = "researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annoy>=1.17.3",
    "chromadb>=1.0.15",
    "langchain",
    "ollama>=0.5.1",
    "openai>=1.96.1",
    "pypdf>=5.8.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "transformers>=4.55.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
researcher = "researcher.cli.cli:main"
